Funcionalidad del bot Terminada

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 VITE_ALLDRINKS = https://www.thecocktaildb.com/api/json/v1/1/filter.php?c=Cocktail
 VITE_SEARCHBYNAME = https://www.thecocktaildb.com/api/json/v1/1/search.php?s=
-VITE_SEARCHBYALCOHOL = https://www.thecocktaildb.com/api/json/v1/1/filter.php?a=
 VITE_DESCRIPTIONCOCKTAIL = www.thecocktaildb.com/api/json/v1/1/lookup.php?i=
+VITE_RANDOMDRINK = https://www.thecocktaildb.com/api/json/v1/1/random.php
+
+VITE_SEARCHBYALCOHOL = https://www.thecocktaildb.com/api/json/v1/1/filter.php?a=
